<resources>

    <string name="tipEmergencyContact">* 911 is automatically an emergency contact *</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>
    <string name="simulate_route">Simulate Route</string>
    <string name="start_from_location">Start route from current location</string>
    <string name="language">Language</string>
    <string name="unit_type">Unit Type</string>
    <string name="route_profile">Route Profile</string>

    <string name="job_id">JobId</string>
    <string name="vehicle_id">VehicleId</string>
    <string name="search_input">Search…</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="unit_type_key" translatable="false">unit_type</string>
    <string name="simulate_route_key" translatable="false">simulate_route</string>
    <string name="start_from_location_key" translatable="false">start_from_location</string>
    <string name="language_key" translatable="false">language</string>
    <string name="route_profile_key" translatable="false">route_profile</string>
    <string name="first_start_dialog_key" translatable="false">first_start_dialog</string>
    <string name="first_navigation_dialog_key" translatable="false">first_navigation_dialog</string>
    <string name="default_locale" translatable="false">default_for_device</string>
    <string name="default_unit_type" translatable="false">default_for_device</string>
    <string name="current_night_mode" translatable="false">current_night_mode</string>

    <string name="error_route_not_available">Current route is not available</string>
    <string name="error_select_longer_route">Please select a longer route</string>
    <string name="error_valid_route_not_found">Valid route not found.</string>
    <string name="error_calculating_route">There was an error calculating the route</string>
    <string name="error_fetching_solution">There was an error fetching the solution</string>
    <string name="error_fetching_geocoding">There was an error fetching results from the geocoding API</string>
    <string name="error_vehicle_not_found">Vehicle not found</string>
    <string name="error_location_not_found">Location not found</string>
    <string name="error_geocoding_no_location">No location found</string>
    <string name="error_too_many_waypoints">A route cannot have more than 25 waypoints</string>
    <string name="error_not_enough_waypoints">A route needs at least 2 waypoints</string>
    <string name="error_no_browser_installed">No browser installed</string>
    <string name="error_too_far_from_start_title">Too far from start</string>
    <string name="error_too_far_from_start_message">Would you like to recalculate the route from your current location?</string>
    <string name="explanation_long_press_waypoint">Long press map to place waypoint</string>
    <string name="launch_navigation">Launch Navigation</string>
    <string name="reset_route">Reset Route</string>
    <string name="fetch_solution">Fetch Solution</string>
    <string name="geocoding_search">Search</string>
    <string name="help_message_title">Getting Started</string>
    <string name="legal_title">Legal Notice</string>
    <string name="agree">OK</string>
    <string name="github"> </string>

    <string name="open_gh_maps">Open Route from GH Maps</string>
    <string name="open_vrp_solution">Open VRP Solution</string>
    <!-- <string name="enter"></string> !-->
    <string name="app_name">My Application</string>
    <string name="inputEmergencyContactsStr">Input Emergency Contacts</string>
    <string name="emergencyContactNameLabelStr">Name:</string>
    <string name="emergencyContactNameInputStr">Enter name:</string>
    <string name="emergencyContactPhoneLabelStr">Phone:</string>
    <string name="emergencyContactPhoneInputStr">Enter phone number:</string>
    <string name="enter_pin">Enter pin</string>
    <string name="Welcome">Welcome to CARe!</string>
    <string name="ContactDone">Return to Welcome Page</string>
    <string name="IconDescription">The CARe logo</string>

    <string name="PinSetup">Pin Set-Up</string>
    <string name="ContactSetUp">Contact Set-Up</string>
    <string name="tap">Tap Here to Continue</string>
    <string name="todo"> TODO  </string>

    <string name="active">active</string>
    <string name="button3">send sms message</string>
    <string name="defaultText">SMS location</string>
    <string name="defaultTrigger">WhereRU</string>
    <string name="enter">Enter</string>
    <string name="textIntro">This app can respond to SMS messages with a given text by sending the actual gps location back to the sender.</string>
    <string name="textTitle">Trigger text</string>
    <string name="textTriggerDescription">Enter the text, on which a response should be triggered:</string>
    <string name="textTriggerOn">Automatic responses are activated. We will respond to SMS messages with the text</string>
    <string name="textTriggerOnShort">Respond to:</string>
    <string name="textTriggerOff">No automatic responses will be sent.</string>
    <string name="textRequests">Requests so far</string>
    <string name="textNoRequests">No Requests so far</string>
    <string name="activateDescription">Select this, to activate automatic responses:</string>
    <string name="notificationTitle">request for location</string>
    <string name="notificationSentSuccess">current location sent to %1$s</string>
    <string name="notificationSentNetwork">current network location sent to %1$s</string>
    <string name="notificationSentNoFix">no gps fix to send location to %1$s</string>
    <string name="notificationNoGps">no gps enabled for request, please enable gps and send again from history</string>
    <string name="notificationAborted">request aborted</string>
    <string name="notificationRequest">location request from %1$s</string>
    <string name="locationResponse">http://maps.google.de/maps?q=%1$s,%2$s ; Accuracy: %3$s m ; Speed: %4$s m/s ; Age: %5$s s</string>
    <string name="locationResponseNetwork">Last network location: http://maps.google.de/maps?q=%1$s,%2$s ; Accuracy: %3$s m ; Speed: %4$s m/s ; Age: %5$s s</string>
    <string name="locationUnknown">Unable to determine location.</string>
    <string name="toastRequest">trying to send location to %1$s</string>
    <string name="toggleButton">active</string>
    <string name="timeTitle">Time to gps fix</string>
    <string name="timeDescription">How long should I try to determine the actual gps location before sending back a response?</string>
    <string name="useNetworkTitle">Fall back to network location</string>
    <string name="useNetworkDescription">Enable this, to respond with the last known network location when either gps is disabled or there was no gps fix in time.</string>
    <string name="googleMapsTitle">Newest Google Maps</string>
    <string name="googleMapsDescription">Enable this, to be compatible with the latest Google Maps.</string>
    <string-array name="times">
        <item>15 seconds</item>
        <item>30 seconds</item>
        <item>1 minute</item>
        <item>2 mintues</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>1 hour</item>
    </string-array>
    <string-array name="timeValues">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
        <item>3600</item>
    </string-array>
    <string name="defaultTime">600</string>
    <string name="geoUrl">geo:%1$s,%2$s?q=%3$s%4$s</string>
    <string name="locationListEntryHeader">"%1$s, %2$s</string>
    <string name="locationListEntryFooter">"%1$s (%2$s)</string>
    <string name="menuPreferences">Preferences</string>
    <string name="menuClearRequests">Clear Requests</string>
    <string name="menuAbout">About</string>
    <string name="contextSendAgain">Send Again</string>
    <string name="contextCall">Call</string>
    <string name="contextSendSms">Send SMS</string>
    <string name="statusLocationFound">Location found</string>
    <string name="statusNoLocation">Location not found</string>
    <string name="statusRunning">Sending...</string>
    <string name="statusNoGps">No GPS</string>
    <string name="statusAborted">Aborted</string>
    <string name="statusNetwork">Network sent</string>
    <string name="statusNetworkNoGps">Network sent, GPS not found</string>
    <string name="aboutTitle">CARe</string>
    <string name="aboutText">Passenger safety</string>>
    <color name="aborted">#993333</color>
    <color name="noGps">#ff0000</color>
    <color name="locationFound">#009900</color>
    <color name="noFix">#0000bb</color>
    <color name="running">#333333</color>
</resources>